# message-broker

./: .clang-format  CMakeLists.txt  Dockerfile  README.md  client.cpp  client_config.yaml  client_example.cpp  doxygen.conf  server-docker-run.sh  server.cpp  server_config.yaml  server_example.cpp
html/: annotated.html  classes.html  classhavka_1_1BrokerClient-members.html  classhavka_1_1BrokerClient.html  classhavka_1_1BrokerClient__inherit__graph.map  classhavka_1_1BrokerClient__inherit__graph.md5  classhavka_1_1BrokerServer-members.html  classhavka_1_1BrokerServer.html  classhavka_1_1BrokerSyncClient-members.html  classhavka_1_1BrokerSyncClient.html  classhavka_1_1BrokerSyncClient__inherit__graph.map  classhavka_1_1BrokerSyncClient__inherit__graph.md5  classhavka_1_1ClientConfig-members.html  classhavka_1_1ClientConfig.html  classhavka_1_1Connection-members.html  classhavka_1_1Connection.html  classhavka_1_1Connection__inherit__graph.map  classhavka_1_1Connection__inherit__graph.md5  classhavka_1_1HavkaClient-members.html  classhavka_1_1HavkaClient.html  classhavka_1_1HavkaClient__inherit__graph.map  classhavka_1_1HavkaClient__inherit__graph.md5  classhavka_1_1HavkaSyncClient-members.html  classhavka_1_1HavkaSyncClient.html  classhavka_1_1HavkaSyncClient__coll__graph.map  classhavka_1_1HavkaSyncClient__coll__graph.md5  classhavka_1_1IMessageStorage-members.html  classhavka_1_1IMessageStorage.html  classhavka_1_1IMessageStorage__inherit__graph.map  classhavka_1_1IMessageStorage__inherit__graph.md5  classhavka_1_1IQueue-members.html  classhavka_1_1IQueue.html  classhavka_1_1IQueue__inherit__graph.map  classhavka_1_1IQueue__inherit__graph.md5  classhavka_1_1MutexQueue-members.html  classhavka_1_1MutexQueue.html  classhavka_1_1MutexQueue__coll__graph.map  classhavka_1_1MutexQueue__coll__graph.md5  classhavka_1_1RamStorage-members.html  classhavka_1_1RamStorage.html  (+144 more)
latex/: annotated.tex  classhavka_1_1BrokerClient.tex  classlistener.tex  (+52 more)
(+70 files in other folders)
